fix(frontend): remove dark mode setting

--- a/packages/frontend/src/app/app.component.scss
+++ b/packages/frontend/src/app/app.component.scss
@@ -3,13 +3,4 @@
 :host {
   display: block;
   min-height: 100%;
-
-  @include m.darkModeTransition(background-color, color);
-
-  &.dark {
-    background-color: #000;
-    color: white;
-  }
-
-
 }
