--- a/packages/frontend/src/styles/index.scss
+++ b/packages/frontend/src/styles/index.scss
@@ -11,6 +11,8 @@ html, body {
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  background-color: #000;
+  color: white;
 }
 
 a {
